--- a/Hiwjcn.Web/Views/Shared/Limited.cshtml
+++ b/Hiwjcn.Web/Views/Shared/Limited.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12" style="margin-top:20px;">
             <div class="panel panel-danger center-block">
                 <div class="panel-heading">
                     <b>没有权限</b>
