--- a/Hiwjcn.Web/Views/Shared/AuthManageLayout.cshtml
+++ b/Hiwjcn.Web/Views/Shared/AuthManageLayout.cshtml
@@ -25,9 +25,10 @@
                     </div>
                     <div class="list-group">
                         <a class="list-group-item" href="/AuthManage/Statics" target="_self">数据统计</a>
-                        <a class="list-group-item" href="/AuthManage/Scopes" target="_self">作用域-Scope</a>
-                        <a class="list-group-item" href="/AuthManage/Clients" target="_self">应用-Clients</a>
-                        <a class="list-group-item" href="/AuthManage/Tokens" target="_self">Token</a>
+                        <a class="list-group-item" href="/AuthManage/Scopes" target="_self">功能块</a>
+                        <a class="list-group-item" href="/AuthManage/Clients" target="_self">客户端</a>
+                        <a class="list-group-item" href="/AuthManage/Users" target="_self">用户</a>
+                        <a class="list-group-item" href="/AuthManage/Queues" target="_self">队列</a>
                         <a class="list-group-item" href="/AuthManage/Tasks" target="_self">定时任务</a>
                     </div>
                 </div>
