--- a/Hiwjcn.Web/Views/AuthManage/Users.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Users.cshtml
@@ -1,1 +1,67 @@
-﻿
+﻿@using Hiwjcn.Core.Domain.Auth;
+@{
+    this.SetLayout("AuthManageLayout");
+    this.SetTitle("用户");
+}
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="box_con">
+            <form action="/AuthManage/Users" method="get">
+                <div class="input-group">
+                    <input type="text" class="form-control" name="q" value="@(ViewData["q"])" placeholder="搜索用户..." />
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="submit">搜索</button>
+                    </span>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">用户</div>
+    <div class="panel-body">
+        @{
+            var list = Com.NewIfNull<List<LoginUserInfo>>(ViewData["list"]);
+            if (ValidateHelper.IsPlumpList(list))
+            {
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <td>用户名</td>
+                            <td width="300px">详细数据</td>
+                            <td></td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var m in list)
+                        {
+                            <tr>
+                                <td>@(m.NickName)</td>
+                                <td>
+                                    @if (m.ExtraData != null)
+                                    {
+                                        <span>@(m.ExtraData.ToJson())</span>
+                                    }
+                                </td>
+                                <td></td>
+                            </tr>
+                        }
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="5" class="right">
+                                @(Pager())
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+            }
+            else
+            {
+                <div class="alert alert-info">没有找到用户</div>
+            }
+        }
+    </div>
+</div>
