--- a/Hiwjcn.Web/Views/AuthManage/Users.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Users.cshtml
@@ -23,7 +23,7 @@
     <div class="panel-heading">用户</div>
     <div class="panel-body">
         @{
-            var list = Com.NewIfNull<List<LoginUserInfo>>(ViewData["list"]);
+            var list = this.GetNotNullViewData<List<LoginUserInfo>>("list");
             if (ValidateHelper.IsPlumpList(list))
             {
                 <table class="table table-striped table-hover">
@@ -38,14 +38,16 @@
                         @foreach (var m in list)
                         {
                             <tr>
-                                <td>@(m.NickName)</td>
+                                <td>@(m.UserNameOrNickName())</td>
                                 <td>
                                     @if (m.ExtraData != null)
                                     {
                                         <span>@(m.ExtraData.ToJson())</span>
                                     }
                                 </td>
-                                <td></td>
+                                <td>
+                                    <button class="btn btn-link btn-sm">从所有端下线</button>
+                                </td>
                             </tr>
                         }
                     </tbody>
