--- a/Hiwjcn.Web/Views/AuthManage/Users.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Users.cshtml
@@ -46,7 +46,7 @@
                                     }
                                 </td>
                                 <td>
-                                    <button class="btn btn-link btn-sm">从所有端下线</button>
+                                    <button class="btn btn-link btn-sm del" data-id="@(m.UserID)">从所有端下线</button>
                                 </td>
                             </tr>
                         }
@@ -67,3 +67,31 @@
         }
     </div>
 </div>
+
+<script type="text/javascript">
+    $(function () {
+        $('.del').click(function () {
+            if (!confirm('确定强制下线此用户嘛？')) {
+                return false;
+            }
+
+            var btn = $(this);
+            var id = btn.data('id');
+
+            postJson('/AuthManage/DeleteUserTokens', { user_uid: id }, function (res) {
+                if (res && res.success) {
+                    alert('操作成功');
+                    btn.fadeOut();
+                    setTimeout(function () {
+                        btn.fadeIn();
+                    }, 1000 * 5);
+                }
+                else {
+                    alert(res.msg);
+                }
+            });
+
+            return false;
+        });
+    });
+</script>
