--- a/Hiwjcn.Web/Views/Shared/AuthManageLayout.cshtml
+++ b/Hiwjcn.Web/Views/Shared/AuthManageLayout.cshtml
@@ -14,7 +14,63 @@
 
 <body>
 
-    @IncludeView("nav")
+
+    <style type="text/css">
+        .dropdown:hover > .dropdown-menu {
+            display: block;
+        }
+    </style>
+
+    <div id="nav_wrapper">
+        <div class="navbar nav_cls z-depth-1" style="margin-bottom: 20px;">
+
+            <div class="container">
+                <!-- logo和折叠按钮 -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main_nav">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand logo-img-x" href="/page/home/" target="_self">
+                        Auth后台管理（SSO）
+                    </a>
+                </div>
+
+                <!-- 导航 -->
+                <div class="collapse navbar-collapse" id="main_nav">
+
+                    <ul class="nav navbar-nav navbar-right">
+                        
+                        @{ 
+                            var loginuser = Hiwjcn.Web.Controllers.SSOController.GetLoginSSO();
+                        }
+
+                        @if (loginuser != null)
+                        {
+                            <li>
+                                <a href="#" target="_blank">
+                                    <span class="fa fa-user"></span>
+                                    <span>@(loginuser.UserName)</span>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="/sso/logout" rel="nofollow" target="_self">
+                                    <span class="fa fa-sign-out"></span>
+                                    <span>退出</span>
+                                </a>
+                            </li>
+                        }
+
+                    </ul>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
 
     <div class="container">
         <div class="row" style="margin-top:20px;">
