--- a/Hiwjcn.Web/Views/Shared/AuthManageLayout.cshtml
+++ b/Hiwjcn.Web/Views/Shared/AuthManageLayout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Hiwjcn.Framework.Provider;
+@{
     Layout = null;
 }
 
@@ -44,7 +45,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         
                         @{ 
-                            var loginuser = Hiwjcn.Web.Controllers.SSOController.GetLoginSSO();
+                            var loginuser =this.X.context.GetSSOLoginUser();
                         }
 
                         @if (loginuser != null)
