--- a/Hiwjcn.Web/Views/AuthManage/Statics.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Statics.cshtml
@@ -33,7 +33,10 @@ else
 
     <div class="col-md-12 today_req_box">
         <div class="panel panel-default">
-            <div class="panel-heading">今日流量</div>
+            <div class="panel-heading">
+                <span class="fa fa-bar-chart"></span>
+                <span>今日流量</span>
+            </div>
             <div class="panel-body">
                 <div id="today_req" style="height:300px;width:100%;"></div>
             </div>
