--- a/Hiwjcn.Web/Views/AuthManage/Statics.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Statics.cshtml
@@ -75,6 +75,10 @@ else
                             </tbody>
                         </table>
                     }
+                    else
+                    {
+                        <div class="alert alert-info">没有数据</div>
+                    }
                 }
             </div>
         </div>
@@ -107,6 +111,10 @@ else
                                 }
                             </tbody>
                         </table>
+                    }
+                    else
+                    {
+                        <div class="alert alert-info">没有数据</div>
                     }
                 }
             </div>
@@ -147,6 +155,10 @@ else
                             </tbody>
                         </table>
                     }
+                    else
+                    {
+                        <div class="alert alert-info">没有数据</div>
+                    }
                 }
             </div>
         </div>
@@ -179,6 +191,10 @@ else
                                 }
                             </tbody>
                         </table>
+                    }
+                    else
+                    {
+                        <div class="alert alert-info">没有数据</div>
                     }
                 }
             </div>
