--- a/Hiwjcn.Web/Views/Connect/MyClients.cshtml
+++ b/Hiwjcn.Web/Views/Connect/MyClients.cshtml
@@ -60,11 +60,11 @@
                             var btn = $(this);
                             var id = btn.data('id');
                             postJson('/user/DelClient', { id: id }, function (res) {
-                                if (res.success) {
+                                if (res.Success) {
                                     window.location.reload();
                                 }
                                 else {
-                                    alert(res.msg);
+                                    alert(res.ErrorMsg);
                                 }
                             });
                         });
