--- a/Hiwjcn.Web/Views/AuthManage/Statics.cshtml
+++ b/Hiwjcn.Web/Views/AuthManage/Statics.cshtml
@@ -1,5 +1,4 @@
-﻿@using Hiwjcn.Core.Domain.Auth;
-@using Hiwjcn.Core.Model.Sys;
+﻿@using Hiwjcn.Core.Domain.Sys;
 @{
     this.SetLayout("AuthManageLayout");
     this.SetTitle("数据统计");
